# aimrt_samples

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  format.sh
.devcontainer/: auto_detect_sources.py
.github/workflows/: build.yml  ci.yml
camera_pb_channel/: CMakeLists.txt  README.md
camera_pb_channel/cmake/: GetAimRT.cmake  GetOpenCV.cmake
camera_pb_channel/src/: CMakeLists.txt
camera_pb_channel/src/app/camera_pb_channel_app/: CMakeLists.txt  main.cc
camera_pb_channel/src/module/camera_module/: CMakeLists.txt  camera_module.cc  camera_module.h
camera_pb_channel/src/module/image_recognition_module/: CMakeLists.txt  image_recognition_module.cc  image_recognition_module.h
camera_pb_channel/src/protocols/: CMakeLists.txt  image.proto
helloworld/: CMakeLists.txt  README.md
helloworld/cmake/: GetAimRT.cmake
helloworld/src/: CMakeLists.txt
helloworld/src/app/helloworld_app/: CMakeLists.txt  main.cc
helloworld/src/module/helloworld_module/: CMakeLists.txt  helloworld_module.cc  helloworld_module.h
helloworld/src/pkg/helloworld_pkg/: CMakeLists.txt  pkg_main.cc
helloworld_pkg/: build.sh
helloworld_pkg/cmake/: GetAimRT.cmake
helloworld_pkg/src/: CMakeLists.txt
helloworld_pkg/src/module/helloworld_module/: CMakeLists.txt  helloworld_module.h
helloworld_pkg/src/pkg/helloworld_pkg/: CMakeLists.txt  pkg_main.cc
human_detector/: CMakeLists.txt  README.md  build.sh
human_detector/cmake/: GetAimRT.cmake
human_detector/src/: CMakeLists.txt
human_detector/src/module/hal_camera_module/: CMakeLists.txt  hal_camera_module.cc  hal_camera_module.h
human_detector/src/module/human_detector_module/: CMakeLists.txt  human_detector_module.cc  human_detector_module.h
human_detector/src/module/human_detector_module/utils/: detector.cc  detector.h
human_detector/src/pkg/human_detector_pkg/: CMakeLists.txt  pkg_main.cc
human_detector/src/protocols/: CMakeLists.txt  img.proto
lingxi_x1_sim/: CMakeLists.txt  README.md
lingxi_x1_sim/cmake/: GetAimRT.cmake  GetAimrtMujocoSim.cmake  GetSDL2.cmake
lingxi_x1_sim/src/: CMakeLists.txt
lingxi_x1_sim/src/module/control_module/: CMakeLists.txt  control_module.cc  control_module.h
lingxi_x1_sim/src/module/control_module/controller/: controller_base.cc  controller_base.h  pd_controller.cc  pd_controller.h  rl_controller.cc  rl_controller.h  rotation_tools.h  utilities.cc  utilities.h
lingxi_x1_sim/src/module/control_module/state_machine/: state_machine.cc  state_machine.h
lingxi_x1_sim/src/module/keyboard_module/: CMakeLists.txt  keyboard_module.cc  keyboard_module.h
lingxi_x1_sim/src/module/keyboard_module/keyboard/: keyboard.cc  keyboard.h
lingxi_x1_sim/src/pkg/my_robot_pkg/: CMakeLists.txt  pkg_main.cc
lingxi_x1_sim/src/protocols/: CMakeLists.txt  robot_control.proto
my_pb_channel/: CMakeLists.txt
my_pb_channel/cmake/: GetAimRT.cmake
my_pb_channel/src/: CMakeLists.txt
my_pb_channel/src/app/my_pb_channel_app/: CMakeLists.txt
my_pb_channel/src/module/normal_publisher_module/: CMakeLists.txt  normal_publisher_module.cc  normal_publisher_module.h
my_pb_channel/src/module/normal_subscriber_module/: CMakeLists.txt  normal_subscriber_module.cc  normal_subscriber_module.h
my_pb_channel/src/pkg/my_pb_channel_pkg/: CMakeLists.txt  pkg_main.cc
my_pb_channel/src/protocols/: CMakeLists.txt  event.proto
my_pb_rpc/: CMakeLists.txt  README.md
my_pb_rpc/cmake/: GetAimRT.cmake
my_pb_rpc/src/: CMakeLists.txt
my_pb_rpc/src/app/my_pb_rpc_app/: CMakeLists.txt  main.cc
my_pb_rpc/src/module/normal_client_module/: CMakeLists.txt  normal_client_module.cc  normal_client_module.h
my_pb_rpc/src/module/normal_server_module/: CMakeLists.txt  global.cc  global.h  normal_server_module.cc  normal_server_module.h  service.cc  service.h
my_pb_rpc/src/pkg/my_pb_rpc_pkg/: CMakeLists.txt  pkg_main.cc
my_pb_rpc/src/protocols/: CMakeLists.txt  rpc.proto
my_ros2_channel/: CMakeLists.txt
my_ros2_channel/cmake/: GetAimRT.cmake
my_ros2_channel/src/: CMakeLists.txt
my_ros2_channel/src/app/my_ros2_channel_app/: CMakeLists.txt  main.cc
my_ros2_channel/src/module/normal_publisher_module/: CMakeLists.txt  normal_publisher_module.cc
my_ros2_channel/src/module/normal_subscriber_module/: CMakeLists.txt  normal_subscriber_module.cc  normal_subscriber_module.h
my_ros2_channel/src/protocols/: CMakeLists.txt  package.xml
my_ros2_channel/src/protocols/msg/: Header.msg
my_ros2_rpc/: CMakeLists.txt  README.md
my_ros2_rpc/src/: CMakeLists.txt
my_ros2_rpc/src/app/my_ros2_rpc_app/: CMakeLists.txt
my_ros2_rpc/src/module/normal_client_module/: CMakeLists.txt  normal_client_module.cc  normal_client_module.h
my_ros2_rpc/src/module/normal_server_module/: CMakeLists.txt  normal_server_module.cc  normal_server_module.h  service.cc  service.h
my_ros2_rpc/src/protocols/: CMakeLists.txt  package.xml
my_ros2_rpc/src/protocols/srv/: CalculateSum.srv
